# zenacoin-ver2

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  genesis.txt  libzenacoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json  zenacoin.sln  zenacoin_config.h
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp  zenacoin-cli.bash-completion  zenacoin-qt.pro  zenacoind.bash-completion
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  REST-interface.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zenacoin-conf.md  zmq.md
doc/man/: Makefile.am  zenacoin-cli.1  zenacoin-qt.1  zenacoin-tx.1  zenacoin-util.1  zenacoin-wallet.1  zenacoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  addrdb.cpp  (+154 more)
(+1083 files in other folders)
