dist_man1_MANS=

if BUILD_ZENACOIND
  dist_man1_MANS+=zenacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=zenacoin-qt.1
endif

if BUILD_ZENACOIN_CLI
  dist_man1_MANS+=zenacoin-cli.1
endif

if BUILD_ZENACOIN_TX
  dist_man1_MANS+=zenacoin-tx.1
endif

if BUILD_ZENACOIN_UTIL
  dist_man1_MANS+=zenacoin-util.1
endif

if ENABLE_WALLET
if BUILD_ZENACOIN_WALLET
  dist_man1_MANS+=zenacoin-wallet.1
endif
endif
